--- a/themes/startwords/assets/scss/issue/_list.scss
+++ b/themes/startwords/assets/scss/issue/_list.scss
@@ -2,6 +2,9 @@
 
 body.issue-list {
 
+    // force wrapping 
+    .grid .container { overflow-x: hidden; }
+
     ol {
         list-style: none;
         padding: 0;
